# pair-gpt.nvim

./: Cargo.toml  README.md
lua/: pair-gpt.lua
nvim/lua/: pair-gpt.lua
nvim/plugin/: pair-gpt.vim
plugin/: pair-gpt.vim
src/: main.rs
