[package]
name = "pair-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bat = "0.22.1"
clap = { version = "4.0.29", features = ["derive", "env"] }
reqwest = { version = "0.11.13", features = ["tokio-native-tls", "json"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
snailquote = "0.3.1"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
