[package]
name = "pair-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive", "env"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
snailquote = "0.3.1"
ureq = { version = "2.5.0", features = ["serde_json", "json"] }
